err/basil-daq.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/basil'...
Listing './lib/python3.5/site-packages/basil/HL'...
Compiling './lib/python3.5/site-packages/basil/HL/RegisterHardwareLayer.py'...
***   File "./lib/python3.5/site-packages/basil/HL/RegisterHardwareLayer.py", line 190
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/HL/sensirion_ekh4.py'...
***   File "./lib/python3.5/site-packages/basil/HL/sensirion_ekh4.py", line 33
    print "sensirionEKH4.write() %s"%cmd
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/HL/tti_ql355tp.py'...
***   File "./lib/python3.5/site-packages/basil/HL/tti_ql355tp.py", line 29
    print "ttiTp355tp.write() %s"%command
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil/RL'...
Listing './lib/python3.5/site-packages/basil/TL'...
Compiling './lib/python3.5/site-packages/basil/TL/SiTcp.py'...
***   File "./lib/python3.5/site-packages/basil/TL/SiTcp.py", line 85
    print data, array('B', ack)[8:]
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/dut.py'...
***   File "./lib/python3.5/site-packages/basil/dut.py", line 251
    raise exc[0], exc[1], exc[2]  # raise previous error
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil/utils'...
Listing './lib/python3.5/site-packages/basil/utils/sim'...
Compiling './lib/python3.5/site-packages/basil/utils/sim/SiLibUsb.py'...
***   File "./lib/python3.5/site-packages/basil/utils/sim/SiLibUsb.py", line 87
    print 'SiUSBDevice:WriteI2C', address, data  # raise NotImplementedError("To be implemented.")
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/utils/sim/Test.py'...
***   File "./lib/python3.5/site-packages/basil/utils/sim/Test.py", line 128
    print 'bus.read', ret
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/basil/utils/utils.py'...
***   File "./lib/python3.5/site-packages/basil/utils/utils.py", line 15
    print 'loging:', locals()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil_daq-2.4.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
